# vml_final

./: .gitignore  README.md  pyproject.toml  speed_estimator_3.ipynb
src/notebooks/: speed_estimator_3.ipynb  train.ipynb
src/vml_final/: data.py  model.py  training.py
