[project]
name = "vml_final"

dependencies = [
    "jax",
    "flax",
]

readme = "README.md"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Misha Lvovsky", email = "lvovsky.m@northeastern.edu"},
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=vml-final",
]
