[project]
name = "vml_final"

dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "pandas",
    "orbax",
    "einops",
    "tqdm",
    "torch",
    "optax",
    "scipy",
    "tensorboard",
    "treescope",
    "jax_verify @ git+https://gitlab.com/neu-autonomy/certifiable-learning/jax_verify",
]


readme = "README.md"
version = "0.1.0"
description = "Final project for VML class."
authors = [{ name = "Misha Lvovsky", email = "lvovsky.m@northeastern.edu" }]
requires-python = ">=3.9"
